// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App model > list > should exclude enterprise apps when license is not valid 1`] = `
[
  "airtable",
  "anthropic",
  "appwrite",
  "azure-openai",
  "brave-search",
  "carbone",
  "clickup",
  "code",
  "cryptography",
  "datastore",
  "deepl",
  "delay",
  "discord",
  "disqus",
  "dropbox",
  "filter",
  "flickr",
  "flowers-software",
  "formatter",
  "freescout",
  "ghost",
  "gitea",
  "github",
  "gitlab",
  "gmail",
  "google-calendar",
  "google-drive",
  "google-forms",
  "google-sheets",
  "google-tasks",
  "helix",
  "http-request",
  "hubspot",
  "invoice-ninja",
  "jotform",
  "mailchimp",
  "mailerlite",
  "mattermost",
  "miro",
  "mistral-ai",
  "monday",
  "notion",
  "ntfy",
  "odoo",
  "openai",
  "openrouter",
  "perplexity",
  "pipedrive",
  "placetel",
  "postgresql",
  "pushover",
  "reddit",
  "removebg",
  "rss",
  "salesforce",
  "scheduler",
  "self-hosted-llm",
  "signalwire",
  "slack",
  "smtp",
  "spotify",
  "strava",
  "stripe",
  "telegram-bot",
  "todoist",
  "together-ai",
  "trello",
  "twilio",
  "twitter",
  "typeform",
  "virtualq",
  "vtiger-crm",
  "webhook",
  "wordpress",
  "xero",
  "you-need-a-budget",
  "youtube",
  "zendesk",
]
`;

exports[`App model > list > should list all applications including enterprise ones when license is valid 1`] = `
[
  "airtable",
  "anthropic",
  "appwrite",
  "azure-openai",
  "brave-search",
  "carbone",
  "clickup",
  "code",
  "cryptography",
  "datastore",
  "deepl",
  "delay",
  "discord",
  "disqus",
  "dropbox",
  "filter",
  "flickr",
  "flowers-software",
  "formatter",
  "forms",
  "freescout",
  "ghost",
  "gitea",
  "github",
  "gitlab",
  "gmail",
  "google-calendar",
  "google-drive",
  "google-forms",
  "google-sheets",
  "google-tasks",
  "helix",
  "http-request",
  "hubspot",
  "invoice-ninja",
  "jotform",
  "mailchimp",
  "mailerlite",
  "mattermost",
  "miro",
  "mistral-ai",
  "monday",
  "notion",
  "ntfy",
  "odoo",
  "openai",
  "openrouter",
  "perplexity",
  "pipedrive",
  "placetel",
  "postgresql",
  "pushover",
  "reddit",
  "removebg",
  "rss",
  "salesforce",
  "scheduler",
  "self-hosted-llm",
  "signalwire",
  "slack",
  "smtp",
  "spotify",
  "strava",
  "stripe",
  "telegram-bot",
  "todoist",
  "together-ai",
  "trello",
  "twilio",
  "twitter",
  "typeform",
  "virtualq",
  "vtiger-crm",
  "webhook",
  "wordpress",
  "xero",
  "you-need-a-budget",
  "youtube",
  "zendesk",
]
`;

exports[`App model > list should have list of applications keys 1`] = `
[
  "airtable",
  "anthropic",
  "appwrite",
  "azure-openai",
  "brave-search",
  "carbone",
  "clickup",
  "code",
  "cryptography",
  "datastore",
  "deepl",
  "delay",
  "discord",
  "disqus",
  "dropbox",
  "filter",
  "flickr",
  "flowers-software",
  "formatter",
  "freescout",
  "ghost",
  "gitea",
  "github",
  "gitlab",
  "gmail",
  "google-calendar",
  "google-drive",
  "google-forms",
  "google-sheets",
  "google-tasks",
  "helix",
  "http-request",
  "hubspot",
  "invoice-ninja",
  "jotform",
  "mailchimp",
  "mailerlite",
  "mattermost",
  "miro",
  "mistral-ai",
  "monday",
  "notion",
  "ntfy",
  "odoo",
  "openai",
  "openrouter",
  "perplexity",
  "pipedrive",
  "placetel",
  "postgresql",
  "pushover",
  "reddit",
  "removebg",
  "rss",
  "salesforce",
  "scheduler",
  "self-hosted-llm",
  "signalwire",
  "slack",
  "smtp",
  "spotify",
  "strava",
  "stripe",
  "telegram-bot",
  "todoist",
  "together-ai",
  "trello",
  "twilio",
  "twitter",
  "typeform",
  "virtualq",
  "vtiger-crm",
  "webhook",
  "wordpress",
  "xero",
  "you-need-a-budget",
  "youtube",
  "zendesk",
]
`;
